--- a/package.json
+++ b/package.json
@@ -2,16 +2,32 @@
   "name": "shimmer-shards",
   "version": "1.0.0",
   "description": "shimmer-shards is a reactive state library",
-  "main": "index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky install",
-    "lint": "npx eslint src/**/*"
+    "lint": "npx eslint src/**/*",
+    "format:write": "npx prettier src/**/* --write",
+    "build": "rm -rf dist/ && npm run format:write && npm run build:esm && npm run build:cjs",
+    "build:esm": "tsc",
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
+  },
+  "lint-staged": {
+    "*": "eslint"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^17.6.7",
+    "@commitlint/config-conventional": "^17.6.7",
+    "@testing-library/react": "^14.0.0",
     "@types/node": "^20.4.4",
+    "@types/react": "^18.2.16",
+    "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.45.0",
@@ -19,9 +35,14 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
-    "rollup": "^3.26.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "nextra": "^2.10.0",
+    "nextra-theme-docs": "^2.10.0"
   }
 }
