--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dist"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest tests/",
     "prepare": "husky install",
     "lint": "npx eslint src/**/*",
-    "format:write": "npx prettier src/**/* --write",
-    "build": "rm -rf dist/ && npm run format:write && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc",
+    "format:write": "prettier src/**/* --write",
+    "build": "npm run test && rm -rf dist/ && npm run format:write && npm run build:esm && npm run build:cjs && npm run build:types",
+    "build:esm": "tsc -outDir dist/esm",
+    "build:types": "tsc --declaration --emitDeclarationOnly -outDir dist/types",
     "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
   },
   "lint-staged": {
@@ -22,12 +23,19 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
+    "@jest/globals": "^29.6.1",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.3",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.16",
     "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.45.0",
@@ -37,12 +45,11 @@
     "prettier": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
-    "typescript": "^5.1.6"
-  },
-  "dependencies": {
-    "nextra": "^2.10.0",
-    "nextra-theme-docs": "^2.10.0"
+    "typescript": "^5.1.6",
+    "uuid": "^9.0.0"
   }
 }
