--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,5 @@
     "sourceMap": true,
     "declaration": true
   },
-  "exclude": ["www", "test", "examples"]
+  "exclude": ["www", "tests", "examples"]
 }
