--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist"
   ],
   "scripts": {
-    "test": "jest tests/",
+    "test": "npx jest tests/",
     "prepare": "husky install",
     "lint": "npx eslint src/**/*",
     "format:write": "prettier src/**/* --write",
@@ -29,6 +29,7 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@jest/globals": "^29.6.1",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
     "@types/mocha": "^10.0.1",
@@ -41,6 +42,7 @@
     "eslint": "^8.45.0",
     "git-conventional-commits": "^2.6.5",
     "husky": "^8.0.0",
+    "jest-environment-jsdom": "^29.6.1",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
