--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -3,6 +3,9 @@ name: Test on Pull Request
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  push:
+    branches:
+      - main
 
 jobs:
   build:
