--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -1,31 +1,48 @@
-name: Release Package to npm
-
+name: Node.js Package
 on:
   push:
     branches:
       - released
 
 jobs:
-  release:
-    name: Release Package
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: "18.x" # Choose the Node.js version you need
+          node-version: 16
+      - run: npm ci
+      - run: npm test
+      - run: npm run build
 
-      - name: Install Dependencies
-        run: npm install # Or yarn install if you're using Yarn
-
-      - name: Build Package
-        run: npm run build # Or replace this with your build command
-
-      - name: Publish to npm
-        run: npm publish # Or replace this with the command to publish your package
+  publish-gpr:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          registry-url: https://npm.pkg.github.com/
+      - run: npm ci
+      - run: npm run publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
+    publish-npm:
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - uses: actions/setup-node@v3
+          with:
+            node-version: 16
+            registry-url: https://registry.npmjs.org/
+        - run: npm ci
+        - run: npm run publish
+          env:
+            NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
