--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "shimmer-shards",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "shimmer-shards is a reactive state library",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "private": "false",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/qusenazlas/shimmer-shards.git"
+  },
   "files": [
     "dist"
   ],
@@ -15,7 +20,8 @@
     "build": "npm run test && rm -rf dist/ && npm run format:write && npm run build:esm && npm run build:cjs && npm run build:types",
     "build:esm": "tsc -outDir dist/esm",
     "build:types": "tsc --declaration --emitDeclarationOnly -outDir dist/types",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
+    "publish": "npm publish --access public"
   },
   "lint-staged": {
     "*": "eslint"
@@ -26,6 +32,7 @@
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
+    "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@jest/globals": "^29.6.1",
