--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -26,6 +26,6 @@ jobs:
         run: npm run build # Or replace this with your build command
 
       - name: Publish to npm
-        run: npm publish # Or replace this with the command to publish your package
+        run: npm run publish # Or replace this with the command to publish your package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
