--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "npm run test && rm -rf dist/ && npm run format:write && npm run build:esm && npm run build:cjs && npm run build:types",
     "build:esm": "tsc -outDir dist/esm",
     "build:types": "tsc --declaration --emitDeclarationOnly -outDir dist/types",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
+    "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
+    "publish": "npm publish --access public --tag beta"
   },
   "lint-staged": {
     "*": "eslint"
