--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-npm.pkg.github.com/@qusenazlas:_authToken={PERSONAL_ACCESS_TOKEN}
+@qusenazlas:registry-"https://npm.pkg.github.com/
+//npm.pkg.github.com/_authToken=${PERSONAL_ACCESS_TOKEN}
