--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "18.x" # Choose the Node.js version you need
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://npm.pkg.github.com/@qusenazlas
 
       - name: Install Dependencies
         run: npm install # Or yarn install if you're using Yarn
@@ -29,4 +29,4 @@ jobs:
       - name: Publish to npm
         run: npm run publish # Or replace this with the command to publish your package
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
