--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "18.x" # Choose the Node.js version you need
-          registry-url: https://npm.pkg.github.com/
+          registry-url: https://registry.npm.org
 
       - name: Install Dependencies
         run: npm install # Or yarn install if you're using Yarn
@@ -27,6 +27,6 @@ jobs:
         run: npm run build # Or replace this with your build command
 
       - name: Publish to npm
-        run: npm run publish # Or replace this with the command to publish your package
+        run: npm publish --access public # Or replace this with the command to publish your package
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
