--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -17,16 +17,20 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "18.x" # Choose the Node.js version you need
-          registry-url: https://registry.npm.org
+          node-version: "18.x" # Choose the Node.js version you need       
 
       - name: Install Dependencies
         run: npm install # Or yarn install if you're using Yarn
 
       - name: Build Package
         run: npm run build # Or replace this with your build command
-
-      - name: Publish to npm
+      - name: node
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18.x" 
+          registry-url: https://registry.npm.org
+      - name: Publish to npm           
         run: npm publish --access public # Or replace this with the command to publish your package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+          
