--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -28,9 +28,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: "18.x" 
-          registry-url: https://registry.npm.org
+          registry-url: https://registry.npm.org/
       - name: Publish to npm           
-        run: npm publish --access public # Or replace this with the command to publish your package
+        run: npm run publish # Or replace this with the command to publish your package
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
           
