--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -25,11 +25,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: npm ci
       - name: "Publish package"
         uses: changesets/action@v1
         id: changesets
-        with:        
-          publish: npm run publish
+        with:
+          publish: npm run release
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           NPM_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
