--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   "dependencies": {
     "uuid": "^9.0.0"
   },
+  "peerDependencies": {
+    "react": "16.x"
+  },
   "author": "qusenazlas",
   "license": "MIT",
   "devDependencies": {
