fix: peer deps (#16)
* docs: update readme.md (#9)

* fix: uuid not found (#12)

* Fix/peer deps (#15)

* docs: update readme.md (#9) (#10)

* fix: uuid not found  (#13)

* docs: update readme.md (#9)

* fix: uuid not found (#12)

* Update package.json (#14)

* fix: react missing from peer dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shimmershards",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "shimmershards is a reactive state library",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -43,6 +43,9 @@
   },
   "dependencies": {
     "uuid": "^9.0.0"
+  },
+  "peerDependencies": {
+    "react": "16.x"
   },
   "author": "qusenazlas",
   "license": "MIT",
