--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "sourceMap": true,
-    "declaration": true
+    "declarationDir": "dist/types"
   },
+  "include": ["src/**/*", "rollup.config.js"],
   "exclude": ["www", "tests", "examples", "assets"]
 }
