--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "shimmershards",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "shimmershards is a reactive state library",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/qusenazlas/shimmer-shards.git"
@@ -31,7 +31,7 @@
     "prepare": "husky install",
     "lint": "npx eslint src/**/*",
     "format:write": "prettier src/**/* --write",
-    "build": "npm run test && rm -rf dist/ && npm run format:write && npm run build:esm && npm run build:cjs && npm run build:types",
+    "build": "npm run test && rm -rf dist/ && npx rollup -c --bundleConfigAsCjs",
     "build:esm": "tsc -outDir dist/esm",
     "build:types": "tsc --declaration --emitDeclarationOnly -outDir dist/types",
     "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
@@ -55,6 +55,8 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@jest/globals": "^29.6.1",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-typescript": "^11.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
@@ -74,9 +76,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tslib": "^2.6.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "uuid": "^9.0.0"
   }
 }
