--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
     "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
-    "jsx": "preserve" /* Specify what JSX code is generated. */,
-    "module": "commonjs" /* Specify what module code is generated. */,
+    "jsx": "react" /* Specify what JSX code is generated. */,
+    "module": "esnext" /* Specify what module code is generated. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "sourceMap": true,
-    "declaration": true
+    "declarationDir": "dist",
+    "declaration": true,
+    "moduleResolution": "NodeNext"
   },
+  "include": ["src/**/*", "rollup.config.js"],
   "exclude": ["www", "tests", "examples", "assets"]
 }
