--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
+      - run: npm install
       - run: npm ci
       - name: "Publish package"
         uses: changesets/action@v1
