--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shimmershards",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "shimmershards is a reactive state library",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -28,15 +28,12 @@
   ],
   "scripts": {
     "test": "npx jest tests/",
+    "test:watch": "npx jest tests/ --watchAll",
     "prepare": "husky install",
     "lint": "npx eslint src/**/*",
     "format:write": "prettier src/**/* --write",
     "build": "npm run test && rm -rf dist/ && npx rollup -c",
-    "build:esm": "tsc -outDir dist/esm",
-    "build:types": "tsc --declaration --emitDeclarationOnly -outDir dist/types",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
     "release": "npm run build && npx changeset publish",
-    "setup": "npm install && npm run build",
     "docs": "cd ./www && npm run dev",
     "build:docs": "cd ./www && npm run build",
     "start:docs": "cd ./www && npm start"
