--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shimmershards",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "shimmershards is a reactive state library",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -55,6 +55,7 @@
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
     "@jest/globals": "^29.6.1",
+    "@rollup/plugin-commonjs": "^25.0.4",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-typescript": "^11.1.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -78,6 +79,7 @@
     "react-test-renderer": "^18.2.0",
     "rollup": "^2.79.1",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
